# zqoffice

./: LICENSE  README.md  package.json  pnpm-workspace.yaml
examples/: agent-attendance.js  batch-convert.js
mcp-server/: package.json
mcp-server/src/: index.ts  server.ts
server/: package.json
server/src/: index.ts  routes.ts
zqoffice_edit/: border-manager.ts  cell-comment.ts  changeset-merger.ts  chart-engine.ts  chunk-loader.ts  clipboard.ts  conditional-format.ts  data-model.ts  data-validation.ts  doc-edit-engine.ts  doc-editor-engine.ts  doc-editor.html  doc-model.ts  doc-render-engine.ts  doc-toolbar.ts  drag-manager.ts  edit-engine.ts  filter-sort.ts  find-replace.ts  formula-engine.ts  freeze-pane.ts  group-outline.ts  hide-manager.ts  image-manager.ts  mutation-commands.ts  package.json  pivot-table.ts  print-manager.ts  protocol-adapter.ts  render-engine.ts  sheet-editor.html  sheet-engine.ts  sheet-io.ts  slide-edit-engine.ts  slide-editor-engine.ts  slide-editor.html  slide-model.ts  slide-render-engine.ts  slide-toolbar.ts  style-engine.ts  (+2 more)
zqoffice_twc/: CMakeLists.txt  README.md  index.d.ts  index.js  package.json
zqoffice_twc/include/zq/office/: constants.h  export.h  office.h  types.h  version.h
zqoffice_twc/src/: version.cpp  zqoffice_node.cpp
zqoffice_twc/src/api/: detect.cpp  docx_api.cpp  free_buffer.cpp  initialize.cpp  lark_export_api.cpp  powerpoint_reader_api.cpp  pptx_api.cpp  string_buffer.cpp  string_buffer.h  xlsx_api.cpp
zqoffice_twc/src/api/converters/: docx_converter.cpp  docx_converter.h  powerpoint_reader.cpp  powerpoint_reader.h  pptx_converter.cpp  pptx_converter.h  xlsx_converter.cpp  xlsx_converter.h
zqoffice_twc/src/api/json/: json.h  json_parser.cpp  json_parser.h  json_serializer.cpp  json_serializer.h  json_value.cpp  json_value.h
zqoffice_twc/src/biff/: biff_record_header.cpp  biff_record_header.h  biff_record_input_stream.cpp  biff_record_input_stream.h  ppt_record_header.cpp  ppt_record_header.h  record_enumerator.h
zqoffice_twc/src/crypto/: agile_encryption.h  agile_encryption_handler.cpp  agile_encryption_handler.h  cipher.cpp  cipher.h  cipher_factory.cpp  cipher_factory.h  crypto_enums.h  crypto_utils.cpp  crypto_utils.h  encryption_header.cpp  encryption_header.h  encryption_info.cpp  encryption_info.h  encryption_parser.cpp  encryption_parser.h  encryption_verifier.cpp  encryption_verifier.h  i_encryption.h  key_data.h  message_digest.cpp  message_digest.h  message_digest_factory.cpp  message_digest_factory.h  password_derivation.cpp  password_derivation.h  rc4_encryption.cpp  rc4_encryption.h  xor_obfuscation.cpp  xor_obfuscation.h
zqoffice_twc/src/crypto/internal/: aes.cpp  aes.h  base64.cpp  base64.h  rc4.cpp  rc4.h  sha.cpp  sha.h
zqoffice_twc/src/drawing/: chart_convert.cpp  chart_convert.h  drawing_utils.cpp  drawing_utils.h  escher_drawing_convert.cpp  escher_drawing_convert.h  i_office_art_client_anchor.h  i_office_art_client_data.h  i_office_art_client_textbox.h  shape_pr.cpp  shape_pr.h  text_body.cpp  text_body.h  theme.cpp  theme.h  theme_runtime_builder.cpp  theme_runtime_builder.h  tt_shape.cpp  tt_shape.h  tt_shape_convert.cpp  tt_shape_convert.h  tt_shape_geom.cpp  tt_shape_geom.h
zqoffice_twc/src/drawing/enums/: bu_auto_num_type.cpp  bu_auto_num_type.h  drawing_enums.h  prst_clr_type.cpp  prst_clr_type.h  prst_shape_type.cpp  prst_shape_type.h  record_type.cpp  record_type.h  text_enums.cpp  text_enums.h  theme_type.cpp  theme_type.h
zqoffice_twc/src/escher/: blip_record.cpp  blip_record.h  bse_record.cpp  bse_record.h  client_anchor_record.cpp  client_anchor_record.h  escher_record.cpp  escher_record.h
zqoffice_twc/src/excel/: office_art_client_textbox.cpp  office_art_client_textbox.h
zqoffice_twc/src/icu/: charset_detector.cpp  charset_detector.h  converter.cpp  converter.h  icu_loader.cpp  icu_loader.h
zqoffice_twc/src/numfmt/: date_time.cpp  date_time.h  date_util.cpp  date_util.h
zqoffice_twc/src/ole2/: compound_file_header.cpp  compound_file_header.h  compound_file_parser.cpp  compound_file_parser.h  compound_file_system.cpp  compound_file_system.h  directory_entry.cpp  directory_entry.h  fat_table.cpp  fat_table.h  mini_fat_table.cpp  mini_fat_table.h
zqoffice_twc/src/ooxml/: xml_reader.cpp  xml_reader.h  zip_reader.cpp  zip_reader.h  zip_writer.cpp  zip_writer.h
zqoffice_twc/src/ooxml/dml/: dml_common.h  dml_reader.cpp  dml_reader.h  group_shape_node.cpp  group_shape_node.h
zqoffice_twc/src/ooxml/opc/: opc_package.cpp  opc_package.h
zqoffice_twc/src/ooxml/pml/: pml_common.h  pml_reader.cpp  pml_reader.h  pml_writer.cpp  pml_writer.h
zqoffice_twc/src/ooxml/sml/: sml_common.h  sml_reader.cpp  sml_reader.h  sml_writer.cpp  sml_writer.h
zqoffice_twc/src/ooxml/wml/: wml_reader.cpp  wml_reader.h  wml_writer.cpp  wml_writer.h
zqoffice_twc/src/painter/: native_event.cpp  native_event.h  painter.cpp  painter.h  painter_enums.h
zqoffice_twc/src/painter/lynx/: lynx_font_metrics.cpp  lynx_font_metrics.h  lynx_point.cpp  lynx_point.h  lynx_rrect.cpp  lynx_rrect.h
zqoffice_twc/src/powerpoint/: office_art_client_anchor.cpp  office_art_client_anchor.h
zqoffice_twc/src/textlayout/: base_run.cpp  base_run.h  font_info.h  i_canvas_helper.h  i_font_manager.h  indent.h  layout_measurer.h  layout_page.cpp  layout_page.h  layout_position.h  line_range.cpp  line_range.h  num_pr.h  object_run.cpp  object_run.h  p_pr.cpp  p_pr.h  paragraph.cpp  paragraph.h  run_delegate.h  run_metrics.h  run_pr.h  run_range.h  spacing.h  tabs.h  text_line.cpp  text_line.h  text_run.cpp  text_run.h  textlayout_enums.h
zqoffice_twc/src/utils/: color_helper.cpp  color_helper.h  format_selector.cpp  format_selector.h  geometry.cpp  geometry.h  little_endian.cpp  little_endian.h  u8string.cpp  u8string.h  utils.cpp  utils.h
